# Job_Portal

./: .gitignore  .gitignore_temp  FUTURE_ROADMAP.md  crop_logo.py  vercel.json
Backend/: .env  app.py  migrate_to_mongodb.py  pyproject.toml  requirements.txt  seed_fresher_jobs.py  serve_production.py  students_data.xlsx  test_connection.py
Backend/uploads/resumes/: 20251226_165039_SUPRIYA - RESUME (1) (2).docx
api/: index.py
frontend/: DEPLOYMENT.md  crop_logo.cjs  index.html  package-lock.json  package.json  remove_bg.cjs
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: ApplicationForm.jsx  Layout.jsx
frontend/src/pages/: About.jsx  AdminDashboard.jsx  AdminLogin.jsx  CareerPortal.jsx  Contact.jsx  FindJobs.jsx  Home.jsx  JobDetailsPage.jsx  Services.jsx
