[project]
name = "job-portal-backend"
version = "1.0.0"
description = "Backend for Job Portal Application"
requires-python = ">=3.9"
dependencies = [
    "Flask==3.0.0",
    "flask-cors==4.0.0",
    "pymongo==4.6.1",
    "pandas==2.1.4",
    "openpyxl==3.1.2",
    "python-dotenv==1.0.0",
    "PyJWT==2.8.0",
    "waitress==3.0.0"
]

[tool.setuptools]
packages = ["Backend"]

[project.scripts]
app = "Backend.app:app"
